--- a/templates/index.html
+++ b/templates/index.html
@@ -202,6 +202,13 @@
 }
 
     </style>
+    <style>
+        .sort-icon {
+            background-color: rgba(214, 209, 209, 0.903);
+            padding: 1px;
+            border-radius: 3px;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
