--- a/templates/logs.html
+++ b/templates/logs.html
@@ -24,7 +24,7 @@
                     <th>File</th>
                     <!-- <th>Serial #</th> -->
                     <!-- <th>Host Status</th> -->
-                    <th>CSV File</th>
+                    <!-- <th>CSV File</th> -->
                     <!-- <th>CSV File Contents</th> -->
                 </tr>
             </thead>
@@ -95,7 +95,7 @@
                             const row = `<tr record_id="${record.id}">
                                 <td>${record.id}</td>
                                 <td>${record.file_name}</td>   
-                                <td>${record.csv_file_name}</td>
+                                
                             </tr>`;
                             logsTableBody.append(row);
                         });
