--- a/templates/index.html
+++ b/templates/index.html
@@ -209,6 +209,17 @@
             border-radius: 3px;
         }
     </style>
+    <style>
+        /* Styles for the logs process output stream ;logs.html tempalte  */
+        #output {
+            white-space: pre-wrap; /* Preserve whitespace and line breaks */
+            background-color: #f4f4f4;
+            padding: 10px;
+            border: 1px solid #ddd;
+            height: 400px;
+            overflow-y: scroll;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
