--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,5 +1,5 @@
 <div id="logs-section" class="container mt-5">
-    <h1 class="text-center">LOGS Section</h1>
+    <h3 class="text-center">LOG files processing</h3>
     <div id="controls" class="d-flex justify-content-center mb-3">
         <div class="d-flex flex-grow-1 justify-content-center align-items-center">
             <button id="start-btn" class="btn btn-primary mr-2">Start Process</button>
