--- a/templates/reports.html
+++ b/templates/reports.html
@@ -79,7 +79,8 @@
     <div id="reports-alert-message" class="alert alert-danger" role="alert" style="display: none;">
         <!-- Messages area  -->
     </div>
-
+</div>  
+<div class="container-fluid">
     <!-- Button options section -->
     <div id="buttonOptions" class="mb-4" style="display: none;">
         <button class="btn btn-primary" id="foxconnReportBtn">Foxconn Report</button>
@@ -104,7 +105,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Populate with search results dynamically -->
+                <!-- Populated with search results -->
             </tbody>
         </table>
     </div>
