--- a/templates/index.html
+++ b/templates/index.html
@@ -220,6 +220,15 @@
             overflow-y: scroll;
         }
     </style>
+    <style>
+        .notification {
+            position: fixed;
+            top: 400px; /* Adjust Up/Down value as needed */
+            left: 10px;
+            z-index: 1000;
+            display: none;
+        }
+        </style>
 </head>
 <body>
     <div class="container-fluid">
