--- a/templates/reports.html
+++ b/templates/reports.html
@@ -261,6 +261,8 @@
                 return 'table-warning';
             case 'testing':
                 return 'table-info';
+            case 'inelegible':
+                return 'table-dark';
             default:
                 return 'table-secondary';
         }
