first changes with codespace copilot

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,3 @@
-
   
   
   <!-- Topbar Section -->
@@ -201,17 +200,12 @@
                         <label for="testResult" class="col-md-4 col-form-label  text-dark"><mark>Test Result</mark></label>
                         <div class="col-md-8">
                             <select class="form-control" id="testResult">
-                                <option value="NFF">Pass (NFF)</option>
-                                <option value="VF">Fail (VF)</option>
-                                <option value="VM/PPS">Scrap (VM/PPS)</option>
-                                <option value="TESTING">Test in progress</option>
-                                <option value="Unknown">Unknown</option>
-                                <option value="Ineligible">Ineligible</option>
-                                <!-- <option value="NFF">NFF</option>
-                                <option value="VF">VF</option>
-                                <option value="VM/PPS">VM/PPS</option>
-                                <option value="TESTING">TESTING</option>
-                                <option value="Unknown">Unknown</option> -->
+                                <option value="NFF" title="Pass (NFF)">NFF</option>
+                                <option value="VF" title="Fail (VF)">VF</option>
+                                <option value="VM/PPS" title="Scrap (VM/PPS)">VM/PPS</option>
+                                <option value="TESTING" title="Test in progress">TESTING</option>
+                                <option value="Unknown" title="Unknown">Unknown</option>
+                                <option value="Ineligible" title="Ineligible">Ineligible</option>
                             </select>
                         </div>
                     </div>
