--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap.min.css') }}">
-    <script src="{{ url_for('static', filename='/bootstrap.min.js') }}"></script>
+    <script src="/static/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
+    <script src="/static/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,7 @@
                     {{ error }}
                 </div>
                 {% endif %}
-                <form method="post" action="{{ url_for('login') }}">
+                <form method="post" action="/login">
                     <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" class="form-control" id="username" name="username" required>
@@ -28,7 +28,7 @@
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
-                    <a href="{{ url_for('register') }}" class="btn btn-secondary btn-block">Register</a>
+                    <a href="/register" class="btn btn-secondary btn-block">Register</a>
                 </form>
             </div>
         </div>
