--- a/templates/index.html
+++ b/templates/index.html
@@ -156,7 +156,7 @@
             display: none; /* Initially hidden */
         }
         .raw-failure-column .cell-content {
-            font-size: 0.6em; /* Smaller font size */
+            /* font-size styling removed */
         }
     </style>
 
